--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@ layout: default
 ---
 
 <body>
+  <script src="../scripts/page.js"></script>
+  
+  
   <div id="heading">
-    
     <h1 style="text-align:center"> Class Selection </h1>
-    
   </div>
+  <div id="class-selection-box"></div>
+  
+  
 </body>
