--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <body>
-  <script src="../scripts/page.js"></script>
+  <script src="scripts/page.js"></script>
   
   
   <div id="heading">
