--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
   <div id="heading">
     <h1 style="text-align:center"> Class Selection </h1>
   </div>
-  <div id="class-selection-box"></div>
+  <div id="classSelectionBox"></div>
   
   
 </body>
