--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <div id="heading">
     <h1 style="text-align:center"> Class Selection </h1>
   </div>
-  <div id="classSelectionBoxId" style="position:relative"></div>
+  <div id="classSelectionBoxId" style="display:flex; flex-wrap:wrap"></div>
   
   <script src="scripts/page.js"></script>
 </body>
