--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ layout: default
     <h1 style="text-align:center"> Class Selection </h1>
   </div>
   <div id="classSelectionBoxId" style="display:flex; flex-wrap:wrap"></div>
+ 
+  <div id="deckDisplayBoxId" style="display:flex; flep-wrap:wrap"></div>
   
-  <script src="scripts/page.js"></script>
+  <script src="scripts/page.js" type="module"></script>
 </body>
