--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
   </div>
   <div id="classSelectionBoxId" style="display:flex; flex-wrap:wrap"></div>
  
-  <div id="deckDisplayBoxId" style="display:flex; flep-wrap:wrap"></div>
+  <div id="deckDisplayBoxId" style="display:flex; flex-wrap:wrap"></div>
   
   <script src="scripts/page.js" type="module"></script>
 </body>
