--- a/index.html
+++ b/index.html
@@ -4,14 +4,27 @@ layout: default
 
 <body>
  
-  <div id="heading">
-    <h1 style="text-align:center"> Class Selection </h1>
-  </div>
-  <div id="classSelectionBoxId" style="display:flex; flex-wrap:wrap"></div>
- 
-  <div id="perkContainer" style="display:flex; flex-wrap:wrap"></div>
+ <style>
+  .classSelectionIcon {
+   //max-width: 16.66%;
+   //border-width: 2%;
+  }
   
-  <div id="deckDisplayBoxId" style="display:flex; flex-wrap:wrap"></div>
-   
-  <script src="scripts/page.js" type="module"></script>
+  .classSelectionIcon:after {
+   //padding-bottom: 100%;
+  }
+ </style>
+ 
+ <div id="heading">
+   <h1 style="text-align:center"> Class Selection </h1>
+ </div>
+ 
+ <div id="classSelectionBoxId" style="display:flex; flex-wrap:wrap"></div>
+
+ <div id="perkContainer" style="display:flex; flex-wrap:wrap"></div>
+ 
+ <div id="deckDisplayBoxId" style="display:flex; flex-wrap:wrap"></div>
+  
+ <script src="scripts/page.js" type="module"></script>
+ 
 </body>
