--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ layout: default
   .classSelectionIcon:after {
    //padding-bottom: 100%;
   }
+  
+  #testing {
+   color: red;
+  }
  </style>
  
  <div id="heading">
