--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@ layout: default
  
  <style>
   .classSelectionIcon {
-   //max-width: 16.66%;
-   //border-width: 2%;
+   max-width: 12.66%;
   }
   
   .classSelectionIcon:after {
-   //padding-bottom: 100%;
   }
   
-  #testing {
-   color: red;
+  .classSelectionIconWrapper {
+   width: 12.66%;
+   border-width: 2%;
   }
   
  </style>
