--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ layout: default
   .classSelectionIconWrapper {
    width: 14.66%;
    border-width: 2%;
+   padding-bottom: 100%;
   }
   
  </style>
