--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@ layout: default
  
  <style>
   .classSelectionIcon {
-   max-width: 14.66%;
+   max-width: 16.66%;
+   positioning: absolute;
   }
   
   .classSelectionIcon:after {
   }
   
   .classSelectionIconWrapper {
-   width: 14.66%;
+   width: 16.66%;
    border-width: 2%;
    padding-bottom: 100%;
+   positioning: relative;
   }
   
  </style>
