--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ layout: default
  
  <style>
   .classSelectionIcon {
-   max-width: 16.66%;
-   height: auto;
+   object-fit: contain;
    positioning: absolute;
+   
   }
   
   .classSelectionIcon:after {
