--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
  <style>
   .classSelectionIcon {
    object-fit: contain;
-   positioning: absolute;
+   position: absolute;
    
   }
   
@@ -18,7 +18,7 @@ layout: default
    width: 16.66%;
    border-width: 2%;
    padding-bottom: 100%;
-   positioning: relative;
+   position: relative;
   }
   
  </style>
