--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@ layout: default
    
   }
   
-  .classSelectionIcon:after {
-  }
-  
   .classSelectionIconWrapper {
    width: 16.66%;
-   border-width: 2%;
    padding-bottom: 100%;
+   position: relative;
+  }
+  
+  .classSelectionIconWrapperWrapper {
+   width: 16.66%;
+   border-width: 2%;
    position: relative;
   }
   
