--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ layout: default
  
  <style>
   .classSelectionIcon {
+   width: 100%;
+   height: 100%;
    object-fit: contain;
    position: absolute;
    
