--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ layout: default
   .classSelectionIcon {
    width: 100%;
    height: 100%;
+   padding: 5%;
    object-fit: contain;
    position: absolute;
    
