Made the buttons legible and also minus one fix

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ layout: default
 
 #deckAdjustingBox {
   width: 40%;
+  text-align: center;
 }
 
 #deckAdjustingBox div img {
@@ -148,6 +149,7 @@ layout: default
   height: auto;
   margin-left: auto;
   margin-right: auto;
+  padding: 2%;
 }
 
 #perkBox {
