See previous commit

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ layout: default
 
 @font-face {
     font-family: 'Nyala';
-    src: url('/fonts/Nyala-Regular.eot');
-    src: url('/fonts/Nyala-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/Nyala-Regular.woff2') format('woff2'),
-        url('/fonts/Nyala-Regular.woff') format('woff'),
-        url('/fonts/Nyala-Regular.svg#Nyala-Regular') format('svg');
+    src: url('fonts/Nyala-Regular.eot');
+    src: url('fonts/Nyala-Regular.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Nyala-Regular.woff2') format('woff2'),
+        url('fonts/Nyala-Regular.woff') format('woff'),
+        url('fonts/Nyala-Regular.svg#Nyala-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
