--- a/index.html
+++ b/index.html
@@ -195,15 +195,39 @@ input:checked {
  <div id="statsBox">
    <div id="generalStatsBox">
      <h3> Overall Deck Stats </h3>
-     <div id="generalStatsNormalBox"></div>
-     <div id="generalStatsAdvBox"></div>
-     <div id="generalStatsDisBox"></div>
+     <div id="generalStatsNormalBox">
+       <h4>Normal Rules</h4>
+       <canvas id="generalStatsNormalChart"></canvas>
+       <div id="generalStatsNormalText"></div>
+     </div>
+     <div id="generalStatsAdvBox">
+      <h4>Advantage</h4>
+      <canvas id="generalStatsAdvChart"></canvas>
+      <div id="generalStatsAdvText"></div>
+     </div>
+     <div id="generalStatsDisBox">
+      <h4>Disadvantage</h4>
+      <canvas id="generalStatsDisChart"></canvas>
+      <div id="generalStatsDisText"></div>
+     </div>
    </div>
    <div id="currentStatsBox">
      <h3> Current Deck Stats </h3>
-    <div id="currentStatsNormalBox"></div>
-    <div id="currentStatsAdvBox"></div>
-    <div id="currentStatsDisBox"></div>
+    <div id="currentStatsNormalBox">
+      <h4>Normal Rules</h4>
+      <canvas id="currentStatsNormalChart"></canvas>
+      <div id="currentStatsNormalText"></div>
+    </div>
+    <div id="currentStatsAdvBox">
+      <h4>Advantage</h4>
+      <canvas id="currentStatsAdvChart"></canvas>
+      <div id="currentStatsAdvText"></div>
+    </div>
+    <div id="currentStatsDisBox">
+      <h4>Disadvantage</h4>
+      <canvas id="currentStatsDisChart"></canvas>
+      <div id="currentStatsDisText"></div>
+    </div>
   </div>
  </div>
   
