ADDED ADV AND DIS and screwed up standard dev

--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@ layout: default
     content: "■";
   }
 
+  #attackValueBox {
+    margin: auto;
+    text-align: center;
+  }
+
   .numberModifier {
     font-family: 'Pirata One';
   }
@@ -193,6 +198,8 @@ layout: default
 </div>
  
  <div id="deckDisplayBox"></div>
+
+ <div id="attackValueBox"></div>
 
  <div id="statsBox">
    <div id="generalStatsBox">
