Condensed code; added disclaimer

--- a/index.html
+++ b/index.html
@@ -185,6 +185,15 @@ layout: default
   }
 
   @media all and (max-width: 800px) {
+    /*
+    #controllerBox {
+      flex-direction: column;
+    }
+
+    #deckAdjustingBox {
+      display: flex;
+    }*/
+
     #utilityBox {
       flex-direction: column;
     }
