I FIXED THE CSS FILE

--- a/index.html
+++ b/index.html
@@ -8,230 +8,8 @@ layout: default
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/site.webmanifest">
-  <!--<link rel="stylesheet" type="text/css" href="/siteCSS.css">-->
+  <link rel="stylesheet" type="text/css" href="siteCSS.css">
 
-
-  <!-- I tried putting this into an external CSS file but it didn't seem to work, or worth it to keep trying-->
-  <style>
-    @font-face {
-    font-family: 'Pirata One';
-    src: url('fonts/PirataOne-Regular.eot');
-    src: url('fonts/PirataOne-Regular.eot?#iefix') format('embedded-opentype'),
-        url('fonts/PirataOne-Regular.woff2') format('woff2'),
-        url('fonts/PirataOne-Regular.woff') format('woff'),
-        url('fonts/PirataOne-Regular.svg#PirataOne-Regular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  @font-face {
-      font-family: 'Nyala';
-      src: url('fonts/Nyala-Regular.eot');
-      src: url('fonts/Nyala-Regular.eot?#iefix') format('embedded-opentype'),
-          url('fonts/Nyala-Regular.woff2') format('woff2'),
-          url('fonts/Nyala-Regular.woff') format('woff'),
-          url('fonts/Nyala-Regular.svg#Nyala-Regular') format('svg');
-      font-weight: normal;
-      font-style: normal;
-  }
-
-  * {
-    font-family: "Nyala";
-  }
-
-  #heading {
-    text-align: center;
-    font-size: 130%
-  }
-
-  #classSelectionBoxId {
-    outline-color: rgb(234,236,239);
-    outline-style: solid;
-    outline-width: 1px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .classSelectionIcon {
-  width: 90%;
-  height: 90%;
-  padding: 5%;
-  object-fit: contain;
-  position: absolute;
-  
-  }
-
-  .classSelectionIconWrapper {
-  width: 100%;
-  padding-bottom: 100%;
-  position: relative;
-  }
-
-  .classSelectionIconWrapperWrapper {
-  width: 16.66%;
-  border-width: thick;
-  border-style: solid;
-  position: relative;
-  }
-
-  .classSelectionLegal {
-    border-color: goldenrod;
-  }
-
-  .classSelectionLocked {
-    border-color: black;
-  }
-  .classSelectionSelected {
-    border-color: green;
-  }
-
-  .classSelectionProposed {
-    border-color: firebrick;
-  }
-
-  .classSelectionIllegal {
-    border-color: grey;
-  }
-
-  #deckDisplayBox {
-    outline-color: rgb(134,136,139);
-    outline-style: solid;
-    outline-width: 1px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  #deckDisplayBox div {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-  }
-
-  #deckDisplayBox div div {
-    width: 100%;
-    flex: none;
-    padding-bottom: 66.66%;
-    position: relative;
-  }
-
-  #deckDisplayBox div div img {
-    width: 80%;
-    margin: 10%;
-    border-radius: 10%;
-    object-fit: contain;
-    position: absolute;
-  }
-
-  .cardFront {
-    pointer-events: none;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    transform-style: preserve-3d;
-    opacity: 0.99;
-    transition: transform 0.6s;
-  }
-
-  .cardBack {
-    transform: rotateY(180deg);
-    pointer-events: none;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    transform-style: preserve-3d;
-    transition: transform 0.6s;
-    opacity: 0.99;
-  }
-
-  #controllerBox {
-    display: grid;
-  }
-
-  #deckAdjustingBox {
-    text-align: center;
-  }
-
-  #deckAdjustingBox div img {
-    display: block;
-    width: 20%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 2%;
-  }
-
-  #perkBox {
-    font-size: 120%;
-  }
-
-  .perkBoxSpoilerWarning {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-    background-color: slategrey;
-    padding: 5px;
-  }
-
-  .perkBoxSpoilerWarning > span, button {
-    margin: 5px;
-  }
-
-  input:checked {
-    content: "■";
-  }
-
-  #utilityBox {
-    display: flex;
-  }
-
-  #utilityBox div {
-    margin: auto;
-    text-align: center;
-    flex: 1;
-  }
-
-  .numberModifier {
-    font-family: 'Pirata One';
-  }
-
-  @media all and (min-width: 800px) {
-    #statsBoxes > div {
-      display: grid;
-      grid-gap: 10px;
-      grid-template-columns: minmax(300px, 3fr) minmax(200px, 2fr);
-    }
-
-    #controllerBox {
-      grid-template-columns: 2fr 3fr;
-    }
-  }
-
-  @media all and (max-width: 800px) {
-    #controllerBox {
-      grid-template-columns: 1fr;
-    }
-
-    #deckAdjustingBox {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-
-    #perkBox {
-      padding-left: 20%;
-      padding-right: 20%;
-    }
-
-    #utilityBox {
-      flex-direction: column;
-    }
-
-    #statsBox > div {
-      grid-template-columns: 1fr;
-    }
-  }
-
-  </style>
- 
   <div id="heading">
     <h1> Class Selection </h1>
   </div>
