Added all 4 base decks and rearranged buttons

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@ layout: default
   <div id="classSelectionBoxId"></div>
 
   <div id="controllerBox">
+    <div id="perkBox"></div>
     <div id="deckAdjustingBox">
       <div id="minusOneModdlingBox"></div>
       <div id="blessModdlingBox"></div>
       <div id="curseModdlingBox"></div>
     </div>
-    <div id="perkBox"></div>
+    <div id="baseDeckSwitcher"></div>
   </div>
 
   <div id="deckDisplayBox"></div>
